--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 
     <groupId>com.mycompany</groupId>
     <artifactId>alm02-jennyo-lovisal-ivyg</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>alm02-jennyo-lovisal-ivyg</name>
